fix site bg on smaller width

--- a/wsgi/odyssy/basic/static/basic/css/style.css
+++ b/wsgi/odyssy/basic/static/basic/css/style.css
@@ -252,7 +252,7 @@ index-announcement-card a:hover, .index-3row-card a:hover {
 	}
 
     .site-content {
-        background: rgb(4, 146, 161);
+        background: #504f96;
     }
 }
 
